--- a/index.html
+++ b/index.html
@@ -12,13 +12,41 @@
       max-width: 500px;
       align-items: center;
       margin: 0 auto;
+      font-family: "Basetica Bold","Basetica-bold",sans-serif;
     }
     .input-wrapper{
+      display: flex;
+      flex-direction: column;
+      padding: 5px;
+      width: 100%;
+    }
+    .radio-wrapper{
+      display: flex;
       width: 100%;
       justify-content: space-between;
-      align-items: center;
-      display: flex;
-      padding: 5px;
+    }
+    .form-submit{
+      padding: 30px;
+    }
+    .input-submit{
+      height: 50px;
+      width: 100px;
+      font-size: 20px;
+      background-color: #333;
+      border-radius: 4px;
+      font-family: "Basetica Bold","Basetica-bold",sans-serif;
+      color: #fff;
+    }
+    input[type="text"], input[type="email"]{
+      background-color: white;
+      color: #333333;
+      background-clip: padding-box;
+      display: block;
+      box-sizing: border-box;
+      width: 100%;
+      padding: 0.8em 0.6em;
+      word-break: normal;
+      border: 1px solid #dddddd;
     }
   </style>
 </head>
@@ -58,28 +86,48 @@
       </div>
       <div class="input-wrapper">
         <p>Would you like Men’s Boxer-Briefs or Women’s Briefs?</p>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Men's Boxer Briefs</label>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Women's Briefs</label>
+        <div class="radio-wrapper">
+          <div class="radio-input-wrapper">
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Men's Boxer Briefs</label>
+          </div>
+          <div class="radio-input-wrapper">
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Women's Briefs</label>
+          </div>
+        </div>
       </div>
       <div class="input-wrapper">
         <p>What is your waist size?</p>
-        <input type="radio" id="xs" name="size" value="xs">
-        <label for="xs">XS</label>
-        <input type="radio" id="s" name="size" value="s">
-        <label for="s">S</label>
-        <input type="radio" id="m" name="size" value="m">
-        <label for="m">M</label>
-        <input type="radio" id="l" name="size" value="l">
-        <label for="l">L</label>
-        <input type="radio" id="xl" name="size" value="xl">
-        <label for="xl">XL</label>
-        <input type="radio" id="xxl" name="size" value="xxl">
-        <label for="xxl">XXL</label>
+        <div class="radio-wrapper">
+          <div class="radio-input-wrapper">
+            <input type="radio" id="xs" name="size" value="xs">
+            <label for="xs">XS</label>
+          </div>
+          <div class="radio-input-wrapper">
+            <input type="radio" id="s" name="size" value="s">
+            <label for="s">S</label>
+          </div>
+          <div class="radio-input-wrapper">
+            <input type="radio" id="m" name="size" value="m">
+            <label for="m">M</label>
+          </div>
+          <div class="radio-input-wrapper">
+            <input type="radio" id="l" name="size" value="l">
+            <label for="l">L</label>
+          </div>
+          <div class="radio-input-wrapper">
+            <input type="radio" id="xl" name="size" value="xl">
+            <label for="xl">XL</label>
+          </div>
+          <div class="radio-input-wrapper">
+            <input type="radio" id="xxl" name="size" value="xxl">
+            <label for="xxl">XXL</label>
+          </div>
+        </div>
       </div>
       <div class="form-submit">
-        <input type="submit" value="Submit">
+        <input class="input-submit" type="submit" value="Submit">
       </div>
     </form>
   </body>
