--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       display: flex;
       width: 100%;
       justify-content: space-between;
+      margin: 10px 3px;
     }
     .form-submit{
       padding: 30px;
@@ -48,44 +49,47 @@
       word-break: normal;
       border: 1px solid #dddddd;
     }
+    .field-question{
+      margin: 3px 0;
+    }
   </style>
 </head>
   <body>
     <form class="form">
       <div class="input-wrapper">
-        <label>Email Address</label>
+        <label class="field-question">Email Address</label>
         <input required name="email" id="email" type="email"> 
       </div>
       <div class="input-wrapper">
-        <label for="first_name">First Name</label>
+        <label for="first_name" class="field-question">First Name</label>
         <input required type="text" id="first_name" name="first_name"> 
       </div>
       <div class="input-wrapper">
-        <label for="last_name">Last Name</label>
+        <label for="last_name" class="field-question">Last Name</label>
         <input required type="text" id="last_name" name="last_name"> 
       </div>
       <div class="input-wrapper">
-        <label for="address_1">Address Line 1</label>
+        <label for="address_1" class="field-question">Address Line 1</label>
         <input required type="text" id="address_1" name="address_1"> 
       </div>
       <div class="input-wrapper">
-        <label for="address_2">Address Line 2</label>
+        <label for="address_2" class="field-question">Address Line 2</label>
         <input required type="text" id="address_2" name="address_2"> 
       </div>
       <div class="input-wrapper">
-        <label for="city">City</label>
+        <label for="city" class="field-question">City</label>
         <input required type="text" id="city" name="city"> 
       </div>
       <div class="input-wrapper">
-        <label for="state">State</label>
+        <label for="state" class="field-question">State</label>
         <input required type="text" id="state" name="state"> 
       </div>
       <div class="input-wrapper">
-        <label for="zip_code">Zip Code</label>
+        <label for="zip_code" class="field-question">Zip Code</label>
         <input required type="text" id="zip_code" name="zip_code"> 
       </div>
       <div class="input-wrapper">
-        <p>Would you like Men’s Boxer-Briefs or Women’s Briefs?</p>
+        <p class="field-question">Would you like Men’s Boxer-Briefs or Women’s Briefs?</p>
         <div class="radio-wrapper">
           <div class="radio-input-wrapper">
             <input type="radio" id="male" name="gender" value="male">
@@ -98,7 +102,7 @@
         </div>
       </div>
       <div class="input-wrapper">
-        <p>What is your waist size?</p>
+        <p class="field-question">What is your waist size?</p>
         <div class="radio-wrapper">
           <div class="radio-input-wrapper">
             <input type="radio" id="xs" name="size" value="xs">
