added mobile first

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     .radio-wrapper{
       display: flex;
       width: 100%;
-      justify-content: space-between;
-      margin: 10px 3px;
+      justify-content: space-around;
+      margin: 10px 0px;
     }
     .form-submit{
       padding: 30px;
@@ -51,6 +51,15 @@
     }
     .field-question{
       margin: 3px 0;
+    }
+    .radio-input-wrapper{
+      font-size: 14px;
+    }
+
+    @media (min-width: 480px) {
+      .form{
+        font-size: 18px;
+      }
     }
   </style>
 </head>
