--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      padding: 5px;
     }
     .radio-wrapper{
       display: flex;
@@ -62,43 +63,14 @@
       .form-submit{
         padding: 30px;
       }
+      .input-wrapper{
+        padding: 8px;
+      }
     }
   </style>
 </head>
   <body>
     <form class="form">
-      <div class="input-wrapper">
-        <label class="field-question">Email Address</label>
-        <input required name="email" id="email" type="email"> 
-      </div>
-        <div class="input-wrapper">
-          <label for="first_name" class="field-question">First Name</label>
-          <input required type="text" id="first_name" name="first_name"> 
-        </div>
-        <div class="input-wrapper">
-          <label for="last_name" class="field-question">Last Name</label>
-          <input required type="text" id="last_name" name="last_name"> 
-        </div>
-      <div class="input-wrapper">
-        <label for="address_1" class="field-question">Address Line 1</label>
-        <input required type="text" id="address_1" name="address_1"> 
-      </div>
-      <div class="input-wrapper">
-        <label for="address_2" class="field-question">Address Line 2</label>
-        <input required type="text" id="address_2" name="address_2"> 
-      </div>
-      <div class="input-wrapper">
-        <label for="city" class="field-question">City</label>
-        <input required type="text" id="city" name="city"> 
-      </div>
-      <div class="input-wrapper">
-        <label for="state" class="field-question">State</label>
-        <input required type="text" id="state" name="state" maxlength="2"> 
-      </div>
-      <div class="input-wrapper">
-        <label for="zip_code" class="field-question">Zip Code</label>
-        <input required type="text" id="zip_code" name="zip_code" maxlength="5"> 
-      </div>
       <div class="input-wrapper">
         <p class="field-question">Would you like Men’s Boxer-Briefs or Women’s Briefs?</p>
         <div class="radio-wrapper">
@@ -140,6 +112,38 @@
             <label for="xxl">XXL</label>
           </div>
         </div>
+      </div>
+      <div class="input-wrapper">
+        <label class="field-question">Email Address</label>
+        <input required name="email" id="email" type="email"> 
+      </div>
+        <div class="input-wrapper">
+          <label for="first_name" class="field-question">First Name</label>
+          <input required type="text" id="first_name" name="first_name"> 
+        </div>
+        <div class="input-wrapper">
+          <label for="last_name" class="field-question">Last Name</label>
+          <input required type="text" id="last_name" name="last_name"> 
+        </div>
+      <div class="input-wrapper">
+        <label for="address_1" class="field-question">Address Line 1</label>
+        <input required type="text" id="address_1" name="address_1"> 
+      </div>
+      <div class="input-wrapper">
+        <label for="address_2" class="field-question">Address Line 2</label>
+        <input required type="text" id="address_2" name="address_2"> 
+      </div>
+      <div class="input-wrapper">
+        <label for="city" class="field-question">City</label>
+        <input required type="text" id="city" name="city"> 
+      </div>
+      <div class="input-wrapper">
+        <label for="state" class="field-question">State</label>
+        <input required type="text" id="state" name="state" maxlength="2"> 
+      </div>
+      <div class="input-wrapper">
+        <label for="zip_code" class="field-question">Zip Code</label>
+        <input required type="text" id="zip_code" name="zip_code" maxlength="5"> 
       </div>
       <div class="form-submit">
         <input class="input-submit" type="submit" value="Submit">
